--- a/settings.html
+++ b/settings.html
@@ -43,6 +43,7 @@
     }
     .btnRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px;}
     .danger{color:#b42318;}
+    .mini{font-size:12px;color:var(--muted);}
 
     /* 候選池 UI */
     .poolBox{border:1px dashed rgba(120,120,120,.35); border-radius:16px; padding:12px; background:rgba(250,249,246,.7); margin-top:12px;}
@@ -62,6 +63,22 @@
     .poolActions{display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; align-items:center; justify-content:space-between;}
     .modePill{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:10px;}
     .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid var(--line);background:#fff;border-radius:999px;padding:6px 10px;font-weight:900;font-size:12px;}
+
+    /* 背景庫列表 */
+    .bgLibItem{
+      display:flex;align-items:center;gap:10px;
+      border:1px solid var(--line);
+      border-radius:14px;
+      background:#fff;
+      padding:8px;
+    }
+    .bgThumb{
+      width:44px;height:44px;
+      object-fit:cover;
+      border-radius:10px;
+      border:1px solid rgba(0,0,0,.08);
+      flex:0 0 auto;
+    }
   </style>
 </head>
 <body>
@@ -78,7 +95,7 @@
     <div class="card2">
       <h2 style="margin:0 0 10px;font-size:15px;">手帳名稱</h2>
       <label>你的名字</label>
-      <input id="ownerName" type="text" placeholder="例：小美(可不填)"/>
+      <input id="ownerName" type="text" placeholder="例：小美"/>
       <label style="margin-top:10px;">自訂手帳名稱（可留空）</label>
       <input id="siteTitle" type="text" placeholder="例：小美的LDH追星存錢手帳"/>
       <div class="hint">留空會用「你的名字＋的LDH追星存錢手帳」。</div>
@@ -96,7 +113,6 @@
           <button class="tabBtn" id="tabPeople">個人</button>
         </div>
 
-        <!-- 顯示方式切換 -->
         <div class="modePill">
           <label class="pill" id="groupModePill">
             團體顯示：
@@ -135,23 +151,28 @@
       </div>
 
       <div class="catList" id="catList"></div>
+      <div class="hint">顏色會影響：月曆標籤、事件頁膠帶與標籤。</div>
     </div>
 
     <div class="card2">
-      <h2 style="margin:0 0 10px;font-size:15px;">背景</h2>
-      <label>選擇背景</label>
+      <h2 style="margin:0 0 10px;font-size:15px;">背景（背景庫）</h2>
+
+      <label>選擇背景（含你上傳的背景庫）</label>
       <select id="bgSelect"></select>
 
-      <label style="margin-top:10px;">或上傳自己的背景</label>
-      <input id="bgUpload" type="file" accept="image/*"/>
-      <div class="hint">上傳會存進瀏覽器。清除瀏覽資料會消失，可再上傳。</div>
+      <label style="margin-top:10px;">上傳背景到素材庫（可一次選多張）</label>
+      <input id="bgUpload" type="file" accept="image/*" multiple />
+      <div class="hint">上傳後會留存在你的背景庫，除非你自行刪除才會消失。</div>
+
+      <div id="bgLibrary" style="margin-top:10px;"></div>
+      <div class="hint">提示：圖片太大/太多可能塞滿瀏覽器容量，建議用壓縮小圖。</div>
     </div>
 
     <div class="card2">
       <h2 style="margin:0 0 10px;font-size:15px;">音樂</h2>
       <label>上傳音樂（mp3 / m4a）</label>
       <input id="musicUpload" type="file" accept="audio/*"/>
-      <div class="hint">音樂也會存進瀏覽器。若你不需要音樂，可以不設定。</div>
+      <div class="hint">音樂會存進瀏覽器；清除瀏覽資料會消失，可再上傳。</div>
     </div>
 
     <div class="btnRow">
@@ -159,13 +180,15 @@
       <button class="btn" id="reRunSetup">重新跑首次設定</button>
       <button class="btn" id="wipeConfig"><span class="danger">清除設定</span></button>
     </div>
-    <div class="hint">儲存後，月曆/事件頁會套用新對象與顏色。</div>
+    <div class="hint">儲存後，月曆/事件頁會套用新對象與背景。</div>
+
   </div>
 </div>
 
 <script type="module">
   import {
-    getBuiltInBackgrounds, getConfig, saveConfig, applyBackground, getCatTheme
+    getConfig, saveConfig, applyBackground, getCatTheme,
+    getAllBackgroundOptions, addCustomBackgroundFiles, getCustomBackgrounds, deleteCustomBackground
   } from "./assets/app.js";
   import { PRESET_GROUPS, PRESET_PEOPLE } from "./assets/presets.js";
 
@@ -185,12 +208,7 @@
   el("ownerName").value = cfg.ownerName || "";
   el("siteTitle").value = cfg.siteTitle || "";
 
-  // 背景選單
-  const bgs = getBuiltInBackgrounds().filter(Boolean);
-  el("bgSelect").innerHTML = bgs.map(u=>`<option value="${u}">${u}</option>`).join("");
-  el("bgSelect").value = (cfg.backgroundUrl && bgs.includes(cfg.backgroundUrl)) ? cfg.backgroundUrl : (bgs[0] || "assets/backgrounds/default.jpg");
-
-  // ===== 候選池（團體/個人） =====
+  // ===== 候選池 =====
   let poolMode = "groups"; // groups | people
 
   function getDisplayNameFromGroup(g){
@@ -198,6 +216,7 @@
     if(mode === "short" && g.short) return g.short;
     return g.full;
   }
+
   function getDisplayNameFromPerson(p){
     const mode = el("peopleNameMode").value; // roman | kanji
     if(mode === "kanji" && p.kanji) return p.kanji;
@@ -207,19 +226,19 @@
   function poolItems(){
     const q = (el("poolSearch").value || "").trim().toLowerCase();
     let list = [];
+
     if(poolMode === "groups"){
       list = PRESET_GROUPS.map(g=>({
-        key: g.full,
         text: getDisplayNameFromGroup(g),
         meta: g.short ? `可用簡稱：${g.short}` : "團體",
       }));
     }else{
       list = PRESET_PEOPLE.map(p=>({
-        key: p.roman + (p.kanji ? `|${p.kanji}` : ""),
         text: getDisplayNameFromPerson(p),
         meta: p.kanji ? `可切換：${p.roman} / ${p.kanji}` : "個人",
       }));
     }
+
     if(!q) return list;
     return list.filter(x => (x.text + " " + x.meta).toLowerCase().includes(q));
   }
@@ -362,7 +381,6 @@
     });
   }
 
-  // 手動新增
   el("addCat").onclick = ()=>{
     const v = (el("newCat").value || "").trim();
     if(!v) return;
@@ -375,35 +393,109 @@
     renderCats();
   };
 
-  // 背景：內建選單
+  // ===== 背景庫 =====
+  function renderBgSelect(){
+    const opts = getAllBackgroundOptions();
+    el("bgSelect").innerHTML = opts.map(o => {
+      const v = escapeHtml(o.value);
+      return `<option value="${v}">${escapeHtml(o.label)}</option>`;
+    }).join("");
+
+    if(cfg.backgroundUrl){
+      el("bgSelect").value = cfg.backgroundUrl;
+    }else{
+      el("bgSelect").value = (opts[0]?.value) || "";
+    }
+  }
+
+  function renderBgLibrary(){
+    const list = getCustomBackgrounds();
+    const box = el("bgLibrary");
+
+    if(!list.length){
+      box.innerHTML = `<div class="hint">（背景庫目前還沒有圖片）</div>`;
+      return;
+    }
+
+    box.innerHTML = `
+      <div class="hint">背景庫（點刪除才會移除）：</div>
+      <div style="display:flex;flex-direction:column;gap:8px;margin-top:8px;">
+        ${list.map(item => `
+          <div class="bgLibItem">
+            <img class="bgThumb" src="${item.dataUrl}" alt="">
+            <div style="flex:1;min-width:0;">
+              <b style="display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">${escapeHtml(item.name)}</b>
+              <small class="mini">已上傳</small>
+            </div>
+            <button class="btn" data-delbg="${item.id}"><span class="danger">刪除</span></button>
+          </div>
+        `).join("")}
+      </div>
+    `;
+
+    box.querySelectorAll("[data-delbg]").forEach(btn=>{
+      btn.onclick = async ()=>{
+        const id = btn.getAttribute("data-delbg");
+        if(!confirm("確定從背景庫刪除這張背景？")) return;
+
+        // 若正在使用這張背景，刪除後回到第一個可用背景
+        const before = getCustomBackgrounds();
+        const deleting = before.find(x=>x.id===id);
+
+        deleteCustomBackground(id);
+
+        if(deleting && cfg.backgroundUrl === deleting.dataUrl){
+          cfg.backgroundUrl = "";
+          saveConfig(cfg);
+        }
+
+        renderBgSelect();
+        renderBgLibrary();
+        await applyBackground("planner");
+      };
+    });
+  }
+
+  // init 背景
+  renderBgSelect();
+  renderBgLibrary();
+
   el("bgSelect").onchange = async ()=>{
     cfg.backgroundUrl = el("bgSelect").value;
+    saveConfig(cfg);
     await applyBackground("planner");
   };
 
-  // 背景：上傳
   el("bgUpload").onchange = async (e)=>{
-    const f = (e.target.files || [])[0];
-    if(!f) return;
-    const dataUrl = await new Promise(res=>{
-      const r = new FileReader();
-      r.onload = ()=>res(String(r.result));
-      r.readAsDataURL(f);
-    });
-    cfg.backgroundUrl = dataUrl;
+    const files = e.target.files;
+    if(!files || !files.length) return;
+
+    await addCustomBackgroundFiles(files);
+
+    const latest = getCustomBackgrounds().slice(-1)[0];
+    if(latest){
+      cfg.backgroundUrl = latest.dataUrl;
+      saveConfig(cfg);
+    }
+
+    e.target.value = "";
+    renderBgSelect();
+    renderBgLibrary();
     await applyBackground("planner");
-    alert("已上傳背景！記得按『儲存設定』");
+    alert("已加入背景庫！可以在下拉選單切換。");
   };
 
-  // 音樂：上傳
+  // 音樂
   el("musicUpload").onchange = async (e)=>{
     const f = (e.target.files || [])[0];
     if(!f) return;
+
     const dataUrl = await new Promise(res=>{
       const r = new FileReader();
       r.onload = ()=>res(String(r.result));
       r.readAsDataURL(f);
     });
+
     cfg.musicDataUrl = dataUrl;
     alert("已上傳音樂！記得按『儲存設定』");
   };
@@ -435,6 +527,7 @@
     return "";
   }
   function expand3(h){ return "#" + h[1]+h[1]+h[2]+h[2]+h[3]+h[3]; }
+
   function escapeHtml(s){
     return String(s||"")
       .replaceAll("&","&amp;")
