--- a/setup.html
+++ b/setup.html
@@ -180,6 +180,7 @@
         <div class="hint">上傳後會留存在你的背景庫，除非你自行刪除才會消失。</div>
 
         <div id="bgLibrary" style="margin-top:10px;"></div>
+        <div id="bgQuotaHint" class="hint" style="margin-top:8px;"></div>
         <div class="hint">提示：圖片太大/太多可能塞滿瀏覽器容量，建議用壓縮小圖。</div>
 
         <hr style="border:none;border-top:1px solid var(--line);margin:14px 0;">
@@ -200,7 +201,8 @@
   import {
     DEFAULT_CATS,
     getConfig, saveConfig, applyBackground, getCatTheme,
-    getAllBackgroundOptions, addCustomBackgroundFiles, getCustomBackgrounds, deleteCustomBackground
+    getAllBackgroundOptions, addCustomBackgroundFiles, getCustomBackgrounds, deleteCustomBackground,
+    getStorageEstimate, bytesFromLocalStorageKeys, formatBytes
   } from "./assets/app.js";
   import { PRESET_GROUPS, PRESET_PEOPLE } from "./assets/presets.js";
 
@@ -460,18 +462,43 @@
         renderBgSelect();
         renderBgLibrary();
         await applyBackground("planner");
+        await updateBgQuotaHint();
       };
     });
+  }
+
+  async function updateBgQuotaHint(){
+    const hint = document.getElementById("bgQuotaHint");
+    if(!hint) return;
+
+    const est = await getStorageEstimate();
+    const rough = bytesFromLocalStorageKeys(["oshi_config_v1", "oshi_bg_library_v1"]);
+
+    if(est.supported && est.quotaBytes){
+      const used = est.usageBytes;
+      const quota = est.quotaBytes;
+      const left = Math.max(0, quota - used);
+      const pct = Math.min(100, Math.round((used / quota) * 100));
+
+      hint.textContent =
+        `容量：已用 ${formatBytes(used)} / 可用 ${formatBytes(quota)}（剩餘 ${formatBytes(left)}，${pct}%）` +
+        `｜背景庫粗估：${formatBytes(rough)}`;
+    }else{
+      hint.textContent =
+        `容量提示：此瀏覽器不支援精準估算。背景庫＋設定粗估已用 ${formatBytes(rough)}（localStorage）。`;
+    }
   }
 
   // init 背景
   renderBgSelect();
   renderBgLibrary();
+  await updateBgQuotaHint();
 
   el("bgSelect").onchange = async ()=>{
     cfg.backgroundUrl = el("bgSelect").value;
     saveConfig(cfg);
     await applyBackground("planner");
+    await updateBgQuotaHint();
   };
 
   el("bgUpload").onchange = async (e)=>{
@@ -490,6 +517,7 @@
     renderBgSelect();
     renderBgLibrary();
     await applyBackground("planner");
+    await updateBgQuotaHint();
     alert("已加入背景庫！可以在下拉選單切換。");
   };
 
@@ -514,6 +542,7 @@
     renderBgSelect();
     renderBgLibrary();
     await applyBackground("planner");
+    await updateBgQuotaHint();
     el("ownerName").value = "";
     el("siteTitle").value = "";
     el("poolSearch").value = "";
