--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 </main>
 
 <script type="module">
+  import { applyBackground } from "./assets/app.js";
+await applyBackground("planner");
+
   import { guardSetup } from "./assets/app.js";
 guardSetup();
   
@@ -216,6 +219,7 @@ document.title = getSiteTitle();
 </script>
 </body>
 </html>
+
 
 
 
