--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <header>
   <h1 id="siteName">LDH追星存錢手帳</h1>
-  <div class="sub"><a href="settings.html">素材庫</a></div>
+  <div class="sub"><a href="settings.html">設定</div>
 </header>
 
 <main class="home-main">
