--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
     <a class="btn primary" href="calendar.html">
       <div class="icon">📅</div>
       <div>存錢</div>
-      <div class="desc">存錢日亮起來＋貼紙</div>
+      <div class="desc">我的存錢月曆</div>
     </a>
 
     <a class="btn primary" href="expense.html">
       <div class="icon">🧾</div>
       <div>花費</div>
-      <div class="desc">花費月曆＋統計</div>
+      <div class="desc">我的花費月曆</div>
     </a>
 
     <a class="btn primary" href="events.html">
